--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
   :root { --bg:#0b1020; --card:#11162a; --ink:#e5e7eb; --muted:#aab1c2; --accent:#6ee7b7; --ring:#334155; --ink-dark:#0a0f1e; }
   * { box-sizing: border-box; }
-  html, body { margin:0; padding:0; background:linear-gradient(180deg,#0b1020, #0e1326 30%, #0b1020); color:var(--ink); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji"; }
+  html, body { margin:0; padding:0; background:linear-gradient(180deg,#0b1020, #0e1326 30%, #0b1020); color:var(--ink); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans"; }
   a { color: inherit; text-decoration: none; }
   .wrap { max-width: 980px; margin: 0 auto; padding: 20px; }
   header { display:flex; gap:12px; align-items:center; justify-content:space-between; padding:8px 0 16px; position: sticky; top:0; backdrop-filter: blur(6px); background: rgba(11,16,32,0.7); z-index:10; }
@@ -36,20 +36,28 @@
   .dim { color:var(--muted); }
   .detail { display:grid; gap:14px; margin-top:16px; }
   .detail h2 { margin:0; font-size:22px; }
-  .detail .notes { border:1px solid var(--ring); border-radius:14px; padding:12px; color:#d1d5db; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.00)); }
   .two-col { display:grid; gap:14px; grid-template-columns: 1fr; }
   @media (min-width: 850px){ .two-col { grid-template-columns: 1fr 1fr; } }
+  .notes { border:1px solid var(--ring); border-radius:14px; padding:12px; color:#d1d5db; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.00)); }
+  .legend { display:flex; flex-wrap:wrap; gap:8px; }
+  .tag { border:1px solid var(--ring); border-radius:999px; padding:4px 10px; font-size:12px; color:#cbd5e1; }
+  .toggle { display:flex; gap:8px; background:rgba(255,255,255,0.03); border:1px solid var(--ring); border-radius:12px; padding:4px; width:max-content; }
+  .toggle button { border:none; background:transparent; color:var(--ink); padding:6px 10px; border-radius:8px; cursor:pointer; }
+  .toggle button.active { background:var(--ink); color:var(--ink-dark); }
   .qrbox { display:none; align-items:center; gap:10px; margin-left:8px; }
   .qrbox input { width:260px; background:transparent; border:1px solid var(--ring); border-radius:10px; padding:10px; color:var(--ink); outline:none; }
   .qrbox img { width:64px; height:64px; border-radius:8px; border:1px solid var(--ring); background:#0f152b; }
+  model-viewer { width:100%; height:100%; background:transparent; }
 </style>
+<!-- Optional 3D viewer. Safe to leave in even if unused. -->
+<script type="module" src="https://unpkg.com/@google/model-viewer@3.3.0/dist/model-viewer.min.js"></script>
 </head>
 <body>
 <div class="wrap">
   <header>
     <div class="title">
       <h1>Training Plan</h1>
-      <small id="weekLabel"></small>
+      <small id="planLabel"></small>
     </div>
     <div class="toolbar">
       <div class="clock" id="clock">--/--/---- --:--:--</div>
@@ -62,7 +70,7 @@
   </header>
 
   <div id="routerView"></div>
-  <div class="foot">Add to home screen for 1-tap access. It behaves like an app without begging any app store for approval.</div>
+  <div class="foot">Add to home screen for 1-tap access. No app store, no updates, no excuses.</div>
 </div>
 
 <script>
@@ -71,23 +79,89 @@
     label: "Grouped by Muscle",
     groups: {
       Back: [
-        { name: "Lat Pulldown", slug: "lat-pulldown", order: 1, sets: "4 × 10–12", youtube: "https://www.youtube.com/watch?v=CAwf7n6Luuc", photo: "https://via.placeholder.com/1280x720?text=Lat+Pulldown+Machine", notes: "Grip just wider than shoulders, elbows drive down, touch upper chest, slow eccentric, no torso swing." },
-        { name: "Seated Cable Row", slug: "seated-cable-row", order: 2, sets: "4 × 10–12", youtube: "https://www.youtube.com/watch?v=GZbfZ033f74", photo: "https://via.placeholder.com/1280x720?text=Seated+Row+Machine", notes: "Neutral spine, pull to lower ribs, squeeze shoulder blades together, avoid shrugging." },
-        { name: "Chest-Supported Row", slug: "chest-supported-row", order: 3, sets: "3 × 8–10", youtube: "https://www.youtube.com/watch?v=8n0Qk8b7wEw", photo: "https://via.placeholder.com/1280x720?text=Chest+Supported+Row", notes: "Bench 30–45°, pull elbows along body, brief pause at top, keep ribs down." },
-        { name: "Straight-Arm Pulldown", slug: "straight-arm-pulldown", order: 4, sets: "3 × 12–15", youtube: "https://www.youtube.com/watch?v=4vT4fzjkGCQ", photo: "https://via.placeholder.com/1280x720?text=Straight+Arm+Pulldown", notes: "Arms mostly straight, pull in an arc to thighs, lats initiate, no rib flaring." }
+        { name: "Lat Pulldown", slug: "lat-pulldown", order: 1, sets: "4 × 10–12",
+          youtube: "https://www.youtube.com/watch?v=CAwf7n6Luuc",
+          photo: "https://via.placeholder.com/1280x720?text=Lat+Pulldown+Machine",
+          muscles: { primary: ["Latissimus dorsi"], secondary: ["Teres major","Biceps brachii","Mid traps"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Lats+(Front/Back)",
+          model3d: "" /* optional: put a GLB URL here to enable the 3D toggle, e.g. "https://example.com/human_muscles.glb" */,
+          notes: "Grip just wider than shoulders, elbows drive down, touch upper chest, slow eccentric, no torso swing." },
+        { name: "Seated Cable Row", slug: "seated-cable-row", order: 2, sets: "4 × 10–12",
+          youtube: "https://www.youtube.com/watch?v=GZbfZ033f74",
+          photo: "https://via.placeholder.com/1280x720?text=Seated+Row+Machine",
+          muscles: { primary: ["Mid–lower traps","Rhomboids"], secondary: ["Lats","Rear delts","Biceps"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Mid-back",
+          model3d: "",
+          notes: "Neutral spine, pull to lower ribs, squeeze shoulder blades together, avoid shrugging." },
+        { name: "Chest-Supported Row", slug: "chest-supported-row", order: 3, sets: "3 × 8–10",
+          youtube: "https://www.youtube.com/watch?v=8n0Qk8b7wEw",
+          photo: "https://via.placeholder.com/1280x720?text=Chest+Supported+Row",
+          muscles: { primary: ["Lats","Mid traps"], secondary: ["Rear delts","Biceps"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Lats+%2F+Scapular+retractors",
+          model3d: "",
+          notes: "Bench 30–45°, pull elbows along body, brief pause at top, keep ribs down." },
+        { name: "Straight-Arm Pulldown", slug: "straight-arm-pulldown", order: 4, sets: "3 × 12–15",
+          youtube: "https://www.youtube.com/watch?v=4vT4fzjkGCQ",
+          photo: "https://via.placeholder.com/1280x720?text=Straight+Arm+Pulldown",
+          muscles: { primary: ["Lats"], secondary: ["Teres major","Long head triceps"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Lats+%2F+Teres",
+          model3d: "",
+          notes: "Arms mostly straight, pull in an arc to thighs, lats initiate, no rib flaring." }
       ],
       Chest: [
-        { name: "Chest Press Machine", slug: "chest-press", order: 1, sets: "4 × 8–12", youtube: "https://www.youtube.com/watch?v=2tKXW4J9xCc", photo: "https://via.placeholder.com/1280x720?text=Chest+Press+Machine", notes: "Shoulders packed, slow down phase, full lockout optional, keep feet planted." },
-        { name: "Incline Dumbbell Press", slug: "incline-db-press", order: 2, sets: "3 × 8–10", youtube: "https://www.youtube.com/watch?v=8iPEnn-ltC8", photo: "https://via.placeholder.com/1280x720?text=Incline+Bench", notes: "30° incline, wrists stacked, slight pause at chest, no bouncing." }
+        { name: "Chest Press Machine", slug: "chest-press", order: 1, sets: "4 × 8–12",
+          youtube: "https://www.youtube.com/watch?v=2tKXW4J9xCc",
+          photo: "https://via.placeholder.com/1280x720?text=Chest+Press+Machine",
+          muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts","Triceps"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Chest",
+          model3d: "",
+          notes: "Shoulders packed, slow down phase, optional full lockout, feet planted." },
+        { name: "Incline Dumbbell Press", slug: "incline-db-press", order: 2, sets: "3 × 8–10",
+          youtube: "https://www.youtube.com/watch?v=8iPEnn-ltC8",
+          photo: "https://via.placeholder.com/1280x720?text=Incline+Bench",
+          muscles: { primary: ["Upper chest"], secondary: ["Anterior delts","Triceps"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Upper+Chest",
+          model3d: "",
+          notes: "30° incline, wrists stacked, slight pause at chest, no bouncing." }
       ],
       Shoulders: [
-        { name: "Seated Shoulder Press", slug: "seated-shoulder-press", order: 1, sets: "4 × 8–10", youtube: "https://www.youtube.com/watch?v=qEwKCR5JCog", photo: "https://via.placeholder.com/1280x720?text=Shoulder+Press+Machine", notes: "No lower back arch, control tempo, finish with biceps by ears." },
-        { name: "Lateral Raise Machine", slug: "lateral-raise", order: 2, sets: "3 × 12–15", youtube: "https://www.youtube.com/watch?v=3VcKaXpzqRo", photo: "https://via.placeholder.com/1280x720?text=Lateral+Raise+Machine", notes: "Soft elbows, lift to shoulder height, lead with elbows, no shrugging." }
+        { name: "Seated Shoulder Press", slug: "seated-shoulder-press", order: 1, sets: "4 × 8–10",
+          youtube: "https://www.youtube.com/watch?v=qEwKCR5JCog",
+          photo: "https://via.placeholder.com/1280x720?text=Shoulder+Press+Machine",
+          muscles: { primary: ["Anterior delts","Medial delts"], secondary: ["Triceps","Upper traps (stabilizers)"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Delts",
+          model3d: "",
+          notes: "No lower back arch, control tempo, finish with biceps by ears." },
+        { name: "Lateral Raise Machine", slug: "lateral-raise", order: 2, sets: "3 × 12–15",
+          youtube: "https://www.youtube.com/watch?v=3VcKaXpzqRo",
+          photo: "https://via.placeholder.com/1280x720?text=Lateral+Raise+Machine",
+          muscles: { primary: ["Medial delts"], secondary: ["Supraspinatus (initiation)"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Medial+Delts",
+          model3d: "",
+          notes: "Soft elbows, lift to shoulder height, lead with elbows, no shrugging." }
       ],
       Legs: [
-        { name: "Leg Press", slug: "leg-press", order: 1, sets: "4 × 10–12", youtube: "https://www.youtube.com/watch?v=IZxyjW7MPJQ", photo: "https://via.placeholder.com/1280x720?text=Leg+Press+Machine", notes: "Foot width shoulder distance, descend until thighs are near chest without pelvis tuck, don’t lock knees hard." },
-        { name: "Seated Leg Curl", slug: "seated-leg-curl", order: 2, sets: "3 × 12–15", youtube: "https://www.youtube.com/watch?v=1Tq3QdYUuHs", photo: "https://via.placeholder.com/1280x720?text=Leg+Curl+Machine", notes: "Pad above ankles, hips back, squeeze at bottom, slow return." },
-        { name: "Calf Raise", slug: "calf-raise", order: 3, sets: "4 × 12–15", youtube: "https://www.youtube.com/watch?v=YMmgqO8Jo-k", photo: "https://via.placeholder.com/1280x720?text=Calf+Raise+Machine", notes: "Full stretch, pause at top, keep knees soft." }
+        { name: "Leg Press", slug: "leg-press", order: 1, sets: "4 × 10–12",
+          youtube: "https://www.youtube.com/watch?v=IZxyjW7MPJQ",
+          photo: "https://via.placeholder.com/1280x720?text=Leg+Press+Machine",
+          muscles: { primary: ["Quads","Glutes"], secondary: ["Adductors","Calves (stabilizers)"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Quads+%2F+Glutes",
+          model3d: "",
+          notes: "Shoulder-width stance, deep but controlled ROM, don’t slam lockout." },
+        { name: "Seated Leg Curl", slug: "seated-leg-curl", order: 2, sets: "3 × 12–15",
+          youtube: "https://www.youtube.com/watch?v=1Tq3QdYUuHs",
+          photo: "https://via.placeholder.com/1280x720?text=Leg+Curl+Machine",
+          muscles: { primary: ["Hamstrings"], secondary: ["Calves (gastrocnemius)"] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Hamstrings",
+          model3d: "",
+          notes: "Pad above ankles, hips back, squeeze at bottom, slow return." },
+        { name: "Calf Raise", slug: "calf-raise", order: 3, sets: "4 × 12–15",
+          youtube: "https://www.youtube.com/watch?v=YMmgqO8Jo-k",
+          photo: "https://via.placeholder.com/1280x720?text=Calf+Raise+Machine",
+          muscles: { primary: ["Gastrocnemius","Soleus"], secondary: [] },
+          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Target+Muscles:+Calves",
+          model3d: "",
+          notes: "Full stretch, pause at top, keep knees soft." }
       ]
     }
   };
@@ -95,26 +169,18 @@
 
   const GROUP_ORDER = ["Back","Chest","Shoulders","Legs"];
   const routerView = document.getElementById("routerView");
-  const weekLabel = document.getElementById("weekLabel");
+  const planLabel = document.getElementById("planLabel");
   const shareBtn = document.getElementById("shareBtn");
   const qrBox = document.getElementById("qrBox");
   const urlInput = document.getElementById("urlInput");
   const qrImg = document.getElementById("qrImg");
   const clockEl = document.getElementById("clock");
 
-  weekLabel.textContent = PLAN.label || "";
+  planLabel.textContent = PLAN.label || "";
 
-  // Clock with EU format dd/mm/yyyy HH:MM:SS
+  // EU clock dd/mm/yyyy HH:MM:SS
   function two(n){ return String(n).padStart(2,"0"); }
-  function formatEU(d){
-    const day = two(d.getDate());
-    const mon = two(d.getMonth()+1);
-    const yr = d.getFullYear();
-    const hr = two(d.getHours());
-    const min = two(d.getMinutes());
-    const sec = two(d.getSeconds());
-    return `${day}/${mon}/${yr} ${hr}:${min}:${sec}`;
-  }
+  function formatEU(d){ return `${two(d.getDate())}/${two(d.getMonth()+1)}/${d.getFullYear()} ${two(d.getHours())}:${two(d.getMinutes())}:${two(d.getSeconds())}`; }
   function tick(){ clockEl.textContent = formatEU(new Date()); }
   tick(); setInterval(tick, 1000);
 
@@ -129,10 +195,7 @@
     }catch(e){}
     return u;
   }
-
-  function slugify(s){
-    return String(s||"").toLowerCase().replace(/[^a-z0-9]+/g,"-").replace(/(^-|-$)/g,"");
-  }
+  function slugify(s){ return String(s||"").toLowerCase().replace(/[^a-z0-9]+/g,"-").replace(/(^-|-$)/g,""); }
   function navTo(hash){ location.hash = hash; }
   function byOrder(a,b){ return (a.order||999) - (b.order||999); }
 
@@ -196,6 +259,13 @@
     routerView.appendChild(grid);
   }
 
+  function pill(text){
+    const span = document.createElement("span");
+    span.className = "tag";
+    span.textContent = text;
+    return span;
+  }
+
   function renderExerciseView(group, slug){
     const list = (PLAN.groups[group]||[]).slice().sort(byOrder);
     const ex = list.find(e => (e.slug||slugify(e.name)) === slug);
@@ -221,6 +291,7 @@
 
     const section = document.createElement("section");
     section.className = "detail";
+
     const heading = document.createElement("h2");
     heading.textContent = ex.name;
     section.appendChild(heading);
@@ -236,6 +307,7 @@
     const mediaWrap = document.createElement("div");
     mediaWrap.className = "two-col";
 
+    // Video box
     const videoBox = document.createElement("div");
     videoBox.className = "card";
     const video = document.createElement("div");
@@ -254,6 +326,7 @@
     videoBox.appendChild(video);
     videoBox.appendChild(vcap);
 
+    // Machine photo box
     const photoBox = document.createElement("div");
     photoBox.className = "card";
     const photo = document.createElement("div");
@@ -277,6 +350,77 @@
     mediaWrap.appendChild(photoBox);
     section.appendChild(mediaWrap);
 
+    // Target muscles: Photo <-> 3D toggle
+    const musclesBox = document.createElement("div");
+    musclesBox.className = "card";
+    const topRow = document.createElement("div");
+    topRow.style.display = "flex";
+    topRow.style.alignItems = "center";
+    topRow.style.justifyContent = "space-between";
+    const musclesTitle = document.createElement("div");
+    musclesTitle.className = "name";
+    musclesTitle.textContent = "Target muscles";
+    topRow.appendChild(musclesTitle);
+
+    const toggle = document.createElement("div");
+    toggle.className = "toggle";
+    const btnImg = document.createElement("button"); btnImg.textContent = "Photo";
+    const btn3D  = document.createElement("button"); btn3D.textContent = "3D";
+    toggle.appendChild(btnImg); toggle.appendChild(btn3D);
+    topRow.appendChild(toggle);
+    musclesBox.appendChild(topRow);
+
+    const muscleMedia = document.createElement("div");
+    muscleMedia.className = "media";
+    const imgMuscle = document.createElement("img");
+    imgMuscle.src = ex.muscleImage || "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Muscle+Targets";
+    imgMuscle.alt = "Muscle targets";
+    imgMuscle.loading = "lazy";
+    imgMuscle.style.width = "100%";
+    imgMuscle.style.height = "100%";
+    imgMuscle.style.objectFit = "cover";
+
+    // 3D viewer placeholder
+    const viewer = document.createElement("model-viewer");
+    viewer.style.display = "none";
+    viewer.setAttribute("camera-controls", "");
+    viewer.setAttribute("exposure", "0.9");
+    viewer.setAttribute("shadow-intensity", "0");
+    viewer.setAttribute("interaction-prompt", "none");
+    if (ex.model3d){ viewer.src = ex.model3d; } // if empty, we'll keep it hidden
+
+    muscleMedia.appendChild(imgMuscle);
+    muscleMedia.appendChild(viewer);
+    musclesBox.appendChild(muscleMedia);
+
+    const legend = document.createElement("div");
+    legend.className = "legend";
+    const primaries = (ex.muscles?.primary||[]);
+    const secondaries = (ex.muscles?.secondary||[]);
+    if (primaries.length){ legend.appendChild(pill("Primary: " + primaries.join(", "))); }
+    if (secondaries.length){ legend.appendChild(pill("Secondary: " + secondaries.join(", "))); }
+    musclesBox.appendChild(legend);
+
+    // Toggle logic
+    function setToggle(which){
+      btnImg.classList.toggle("active", which==="img");
+      btn3D.classList.toggle("active", which==="3d");
+      imgMuscle.style.display = which==="img" ? "block" : "none";
+      viewer.style.display = which==="3d" ? "block" : "none";
+    }
+    btnImg.onclick = ()=> setToggle("img");
+    btn3D.onclick  = ()=> {
+      if (!ex.model3d){
+        alert("Add a GLB model URL in the plan (model3d) to enable 3D.");
+        return;
+      }
+      setToggle("3d");
+    };
+    setToggle("img");
+
+    section.appendChild(musclesBox);
+
+    // Notes
     const notes = document.createElement("div");
     notes.className = "notes";
     notes.textContent = ex.notes || "No notes. Breathe, move well, don’t be reckless.";
