--- a/index.html
+++ b/index.html
@@ -104,24 +104,23 @@
     label: "Grouped by Muscle",
     groups: {
       Back: [
-        { name: "Lat Pulldown", slug: "lat-pulldown", order: 1, sets: "4 × 10–12",
-          youtube: "https://www.youtube.com/watch?v=CAwf7n6Luuc",
-          photo: "https://via.placeholder.com/1280x720?text=Lat+Pulldown+Machine",
+        { name: "Lat Pulldown", slug: "lat-pulldown", order: 1, sets: "3 × 8",
+          youtube: "https://www.youtube.com/shorts/suWROTA8PVY",
+          photo: "https://github.com/pierazhi/GymSite/blob/main/Image/FlyMachine.jpeg",
           muscles: {
             primary: ["Latissimus dorsi"],
             secondary: ["Teres major","Biceps brachii","Mid traps"],
             // Optional red overlays: use transparent PNG masks aligned to muscleImage
             masks: [
-              { name: "Lats",       url: "https://via.placeholder.com/1280x720.png?text=MASK+LATS", active: true },
+              { name: "Lats",       url: "https://via.placeholder.com/1280x720.png?text=MASK+LATS", active: false },
               { name: "Teres",      url: "https://via.placeholder.com/1280x720.png?text=MASK+TERES", active: false }
             ]
           },
           // For everyone: put a file in your repo and point here, e.g. "images/anatomy/back-lats.png"
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Back+View",
+          muscleImage: "https://github.com/pierazhi/GymSite/blob/main/Image/eJzbY2gABqYGmAAohkXWFILjgRgAh9gMTA==.png",
           // Attachments: name + optional photo
           attachments: [
-            { name: "Wide lat bar", photo: "https://via.placeholder.com/200x200?text=Wide+Bar" },
-            { name: "V-grip (neutral)", photo: "https://via.placeholder.com/200x200?text=V+Grip" }
+            { name: "Wide lat bar", photo: "https://github.com/pierazhi/GymSite/blob/main/Image/OutsideHandle.jpg" }
           ],
           notes: "Grip just wider than shoulders, elbows drive down, touch upper chest, slow eccentric, no torso swing." },
         { name: "Seated Cable Row", slug: "seated-cable-row", order: 2, sets: "4 × 10–12",
