--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   .clock { padding:8px 12px; border:1px solid var(--ring); border-radius:12px; font-variant-numeric: tabular-nums; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.00)); }
   .btn { border:1px solid var(--ring); background:transparent; color:var(--ink); padding:10px 14px; border-radius:12px; cursor:pointer; font-weight:600; }
   .btn:hover { border-color:#44506a; }
-  .btn.sm { padding:6px 10px; font-size:12px; }
   .groups { display:grid; grid-template-columns: repeat(4, minmax(0,1fr)); gap:8px; overflow:auto hidden; padding:8px 0 2px; scrollbar-width:none; }
   .chip { padding:10px 12px; border:1px solid var(--ring); border-radius:999px; text-align:center; white-space:nowrap; cursor:pointer; user-select:none; }
   .chip.active { background:var(--ink); color:var(--ink-dark); border-color:transparent; }
@@ -93,108 +92,42 @@
   </header>
 
   <div id="routerView"></div>
-  <div class="foot">Tip: upload anatomy pics to the repo for everyone, or use the upload button for a quick local preview.</div>
+  <div class="foot">Upload images into your repo and reference them with relative paths. The browser can’t eat GitHub web pages.</div>
 </div>
 
 <script>
   // ---------- EDIT ONLY THIS DATA BLOCK ----------
-  // For published images: put files in your repo (e.g. /images/) and reference like "images/back.png".
-  // For quick local preview: use the "Upload muscle image" button on the exercise page (stores on that device only).
+  // Put your images into an 'Image/' folder in this repo. Reference them like "Image/FlyMachine.jpeg".
+  // If you insist on linking, use 'https://raw.githubusercontent.com/USER/REPO/BRANCH/Image/file.png' or add '?raw=1' to the blob URL.
   const PLAN = {
     label: "Grouped by Muscle",
     groups: {
       Back: [
-        { name: "Lat Pulldown", slug: "lat-pulldown", order: 1, sets: "3 × 8",
+        {
+          name: "Lat Pulldown",
+          slug: "lat-pulldown",
+          order: 1,
+          sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/suWROTA8PVY",
-          photo: "https://github.com/pierazhi/GymSite/blob/main/Image/FlyMachine.jpeg",
+          photo: "Image/FlyMachine.jpeg",                                // ✅ relative path served by GitHub Pages
           muscles: {
             primary: ["Latissimus dorsi"],
             secondary: ["Teres major","Biceps brachii","Mid traps"],
-            // Optional red overlays: use transparent PNG masks aligned to muscleImage
             masks: [
-              { name: "Lats",       url: "https://via.placeholder.com/1280x720.png?text=MASK+LATS", active: false },
-              { name: "Teres",      url: "https://via.placeholder.com/1280x720.png?text=MASK+TERES", active: false }
+              { name: "Lats",  url: "https://via.placeholder.com/1280x720.png?text=MASK+LATS",  active: false },
+              { name: "Teres", url: "https://via.placeholder.com/1280x720.png?text=MASK+TERES", active: false }
             ]
           },
-          // For everyone: put a file in your repo and point here, e.g. "images/anatomy/back-lats.png"
-          muscleImage: "https://github.com/pierazhi/GymSite/blob/main/Image/eJzbY2gABqYGmAAohkXWFILjgRgAh9gMTA==.png",
-          // Attachments: name + optional photo
+          muscleImage: "Image/eJzbY2gABqYGmAAohkXWFILjgRgAh9gMTA==.png",   // ✅ relative path; rename to something sane later
           attachments: [
-            { name: "Wide lat bar", photo: "https://github.com/pierazhi/GymSite/blob/main/Image/OutsideHandle.jpg" }
+            { name: "Wide lat bar", photo: "Image/OutsideHandle.jpg" }   // ✅ relative path
           ],
-          notes: "Grip just wider than shoulders, elbows drive down, touch upper chest, slow eccentric, no torso swing." },
-        { name: "Seated Cable Row", slug: "seated-cable-row", order: 2, sets: "4 × 10–12",
-          youtube: "https://www.youtube.com/watch?v=GZbfZ033f74",
-          photo: "https://via.placeholder.com/1280x720?text=Seated+Row+Machine",
-          muscles: { primary: ["Mid–lower traps","Rhomboids"], secondary: ["Lats","Rear delts","Biceps"], masks: [] },
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Back+View",
-          attachments: [
-            { name: "Close row handle", photo: "https://via.placeholder.com/200x200?text=Close+Handle" }
-          ],
-          notes: "Neutral spine, pull to lower ribs, squeeze shoulder blades, avoid shrugging." },
-        { name: "Chest-Supported Row", slug: "chest-supported-row", order: 3, sets: "3 × 8–10",
-          youtube: "https://www.youtube.com/watch?v=8n0Qk8b7wEw",
-          photo: "https://via.placeholder.com/1280x720?text=Chest+Supported+Row",
-          muscles: { primary: ["Lats","Mid traps"], secondary: ["Rear delts","Biceps"], masks: [] },
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Back+View",
-          attachments: [],
-          notes: "Bench 30–45°, elbows along body, brief pause at top, ribs down." },
-        { name: "Straight-Arm Pulldown", slug: "straight-arm-pulldown", order: 4, sets: "3 × 12–15",
-          youtube: "https://www.youtube.com/watch?v=4vT4fzjkGCQ",
-          photo: "https://via.placeholder.com/1280x720?text=Straight+Arm+Pulldown",
-          muscles: { primary: ["Lats"], secondary: ["Teres major","Long head triceps"], masks: [] },
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Back+View",
-          attachments: [{ name: "Straight bar" }, { name: "Rope" }],
-          notes: "Arms mostly straight, pull in an arc to thighs, lats initiate, no rib flaring." }
+          notes: "Grip just wider than shoulders, elbows drive down, touch upper chest, slow eccentric, no torso swing."
+        }
       ],
-      Chest: [
-        { name: "Chest Press Machine", slug: "chest-press", order: 1, sets: "4 × 8–12",
-          youtube: "https://www.youtube.com/watch?v=2tKXW4J9xCc",
-          photo: "https://via.placeholder.com/1280x720?text=Chest+Press+Machine",
-          muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts","Triceps"], masks: [] },
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Front+View",
-          attachments: [{ name: "Flat handles" }],
-          notes: "Shoulders packed, slow down phase, feet planted." },
-        { name: "Incline Dumbbell Press", slug: "incline-db-press", order: 2, sets: "3 × 8–10",
-          youtube: "https://www.youtube.com/watch?v=8iPEnn-ltC8",
-          photo: "https://via.placeholder.com/1280x720?text=Incline+Bench",
-          muscles: { primary: ["Upper chest"], secondary: ["Anterior delts","Triceps"], masks: [] },
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Front+View",
-          attachments: [{ name: "Dumbbells" }],
-          notes: "30° incline, wrists stacked, slight pause at chest, no bouncing." }
-      ],
-      Shoulders: [
-        { name: "Seated Shoulder Press", slug: "seated-shoulder-press", order: 1, sets: "4 × 8–10",
-          youtube: "https://www.youtube.com/watch?v=qEwKCR5JCog",
-          photo: "https://via.placeholder.com/1280x720?text=Shoulder+Press+Machine",
-          muscles: { primary: ["Anterior delts","Medial delts"], secondary: ["Triceps"], masks: [] },
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Front+View",
-          attachments: [{ name: "Neutral-grip handles" }],
-          notes: "No lower back arch, control tempo, finish with biceps by ears." },
-        { name: "Lateral Raise Machine", slug: "lateral-raise", order: 2, sets: "3 × 12–15",
-          youtube: "https://www.youtube.com/watch?v=3VcKaXpzqRo",
-          photo: "https://via.placeholder.com/1280x720?text=Lateral+Raise+Machine",
-          muscles: { primary: ["Medial delts"], secondary: [], masks: [] },
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Front+View",
-          attachments: [{ name: "Arm pads (machine)" }],
-          notes: "Soft elbows, lift to shoulder height, lead with elbows, no shrugging." }
-      ],
-      Legs: [
-        { name: "Leg Press", slug: "leg-press", order: 1, sets: "4 × 10–12",
-          youtube: "https://www.youtube.com/watch?v=IZxyjW7MPJQ",
-          photo: "https://via.placeholder.com/1280x720?text=Leg+Press+Machine",
-          muscles: { primary: ["Quads","Glutes"], secondary: ["Adductors"], masks: [] },
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Front%2FRear",
-          attachments: [{ name: "Sled platform" }],
-          notes: "Shoulder-width stance, deep but controlled ROM, don’t slam lockout." },
-        { name: "Seated Leg Curl", slug: "seated-leg-curl", order: 2, sets: "3 × 12–15",
-          youtube: "https://www.youtube.com/watch?v=1Tq3QdYUuHs",
-          photo: "https://via.placeholder.com/1280x720?text=Leg+Curl+Machine",
-          muscles: { primary: ["Hamstrings"], secondary: [], masks: [] },
-          muscleImage: "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Rear+View",
-          attachments: [{ name: "Ankle pad (machine)" }],
-          notes: "Pad above ankles, hips back, squeeze at bottom, slow return." }
-      ]
+      Chest: [],
+      Shoulders: [],
+      Legs: []
     }
   };
   // ---------- STOP EDITING HERE ----------
@@ -395,7 +328,7 @@
     mediaWrap.appendChild(photoBox);
     section.appendChild(mediaWrap);
 
-    // Target muscles card with local upload and optional red overlays
+    // Target muscles card with optional red overlays and local upload
     const musclesBox = document.createElement("div");
     musclesBox.className = "card";
 
@@ -408,14 +341,13 @@
     musclesTitle.textContent = "Target muscles";
     topRow.appendChild(musclesTitle);
 
-    // Upload controls
     const uploadControls = document.createElement("div");
     uploadControls.className = "uploadRow";
     const fileInput = document.createElement("input");
     fileInput.type = "file"; fileInput.accept = "image/*"; fileInput.id = "file-"+group+"-"+slug;
     const label = document.createElement("label");
     label.className = "fileLabel"; label.setAttribute("for", fileInput.id);
-    label.textContent = "Upload muscle image";
+    label.textContent = "Upload muscle image (local)";
     const clearBtn = document.createElement("button");
     clearBtn.className = "btn sm"; clearBtn.textContent = "Clear local";
     uploadControls.appendChild(fileInput);
@@ -428,7 +360,6 @@
     const muscleMedia = document.createElement("div");
     muscleMedia.className = "media";
     const imgMuscle = document.createElement("img");
-    // Prefer a locally uploaded image if previously saved
     const local = localStorage.getItem(lsKey(group, slug));
     imgMuscle.src = local || ex.muscleImage || "https://via.placeholder.com/1280x720/11162a/9fb3c8?text=Anatomy+Image";
     imgMuscle.alt = "Muscle targets";
@@ -438,7 +369,6 @@
     imgMuscle.style.objectFit = "cover";
     muscleMedia.appendChild(imgMuscle);
 
-    // Optional red overlays using mask PNGs (publishable, not local)
     const overlayHost = document.createElement("div");
     overlayHost.style.position = "absolute";
     overlayHost.style.inset = "0";
@@ -447,12 +377,10 @@
 
     musclesBox.appendChild(muscleMedia);
 
-    // Chips to toggle masks
     const chipRow = document.createElement("div");
     chipRow.className = "muscleChips";
     musclesBox.appendChild(chipRow);
 
-    // Legend text
     const legend = document.createElement("div");
     legend.className = "legend";
     const primaries = (ex.muscles?.primary||[]);
@@ -461,7 +389,6 @@
     if (secondaries.length){ legend.appendChild(pill("Secondary: " + secondaries.join(", "))); }
     musclesBox.appendChild(legend);
 
-    // Build overlays
     const masks = (ex.muscles?.masks||[]).map(m=>({...m}));
     function renderOverlays(){
       overlayHost.innerHTML = "";
@@ -486,17 +413,16 @@
     renderChips();
     renderOverlays();
 
-    // Local upload handlers
-    fileInput.onchange = async (e)=>{
+    // Local upload handlers (device-only preview)
+    fileInput.onchange = (e)=>{
       const file = e.target.files?.[0];
       if (!file) return;
-      // Convert to data URL so we can persist in localStorage
       const reader = new FileReader();
       reader.onload = ()=>{
         try{
           localStorage.setItem(lsKey(group, slug), reader.result);
         }catch(err){
-          alert("Image too large to store locally. Upload it to your repo instead and set muscleImage to that path.");
+          alert("Image too large for local storage. Upload to your repo and set muscleImage to that path.");
         }
         imgMuscle.src = reader.result;
       };
@@ -509,7 +435,7 @@
 
     section.appendChild(musclesBox);
 
-    // Attachments section
+    // Attachments
     const atts = ex.attachments || [];
     const attBox = document.createElement("div");
     attBox.className = "card";
